tests/snapshots/integration_tests__d2_person_shape.snap
---
source: tests/integration_tests.rs
expression: result.output
---
┌───────────────┐
│{shape: person}│
└───────────────┘
        │
        │
        │
        ▼
    ┌──────┐
    │server│
    └──────┘
