tests/snapshots/integration_tests__d2_shapes.snap
---
source: tests/integration_tests.rs
expression: result.output
---
╭────────╮
├────────┤
│Database│
├────────┤
╰────────╯
     │
     │
     │
     ▼
 (╭────╮)
 (Circle)
 (╰────╯)
