tests/snapshots/integration_tests__d2_sql_table_shape.snap
---
source: tests/integration_tests.rs
expression: result.output
---
╔═════╗
║Users║
╚═════╝
   │
   │
   └┐
    ▼
╔══════╗
║Orders║
╚══════╝
