tests/snapshots/integration_tests__d2_web_architecture.snap
---
source: tests/integration_tests.rs
expression: result.output
---
            ┌────┐
            │User│
            └────┘
               │
               │HTTPS
              ┌┘
              ▼
            ┌───┐
            │CDN│
            └───┘
              │
              │
              │static
              ▼
          ┌───────┐
          │Browser│
          └───────┘
              │
              │
              │API call
              ▼
        ┌───────────┐
        │API Gateway│
        └───────────┘
              │
              │route
              └┐
               ▼
         ┌──────────┐
         │App Server│
         └──────────┘
               │
               │enqueue
   ┌───read────└──────┐
   ▼           │      ▼
┌─────┐        ┌─────────────┐
│Cache│        │Message Queue│
└─────┘        └─────────────┘
               │      │
               │      │process
               ┌──────┘
               ▼
           ┌──────┐
           │Worker│
           └──────┘
               │
               │
               │update
               ▼
          ┌────────┐
          │Database│
          └────────┘
