tests/snapshots/integration_tests__dotted_arrow.snap
---
source: tests/integration_tests.rs
expression: r3.output
---
┌───┐        ┌───┐
│ A │·······▶│ B │
└───┘        └───┘
