tests/snapshots/integration_tests__edge_labels.snap
---
source: tests/integration_tests.rs
expression: result.output
---
┌──────┐        ┌──────┐
│Client│──HTTP─▶│Server│
└──────┘        └──────┘
