tests/snapshots/integration_tests__graph_td_supported.snap
---
source: tests/integration_tests.rs
expression: result.output
---
┌───┐
│ A │
└───┘
  │
  │
  │
  ▼
┌───┐
│ B │
└───┘
