tests/snapshots/integration_tests__hexagon_shape.snap
---
source: tests/integration_tests.rs
expression: result.output
---
/───────\        /───────\
<Prepare>───────▶<Execute>
\───────/        \───────/
