tests/snapshots/integration_tests__labels_correctly.snap
---
source: tests/integration_tests.rs
expression: result.output
---
┌──────┐        ┌──────┐
│Node A│───────▶│Node B│
└──────┘        └──────┘
