tests/snapshots/integration_tests__labels_with_spaces_and_special_chars.snap
---
source: tests/integration_tests.rs
expression: result.output
---
┌──────────┐        ┌─────────────┐        ┌─────┐
│Start Here│───────▶│Wait... what?│───────▶│Done!│
└──────────┘        └─────────────┘        └─────┘
