tests/snapshots/integration_tests__max_width_constraint.snap
---
source: tests/integration_tests.rs
expression: result.output
---
┌────────────────────┐  ┌────…
│Very Long Label Here│─▶│Anot…
└────────────────────┘  └────…
