tests/snapshots/integration_tests__mermaid_auto.snap
---
source: tests/integration_tests.rs
expression: result1.output
---
┌─────┐        ┌───┐
│Start│───────▶│End│
└─────┘        └───┘
